[gd_scene load_steps=4 format=3 uid="uid://bygetsgdaclqe"]

[ext_resource type="Script" uid="uid://cfah27sivgku4" path="res://script/tiro.gd" id="1_t1act"]

[sub_resource type="CircleShape2D" id="CircleShape2D_60wac"]
radius = 236.18002

[sub_resource type="SpriteFrames" id="SpriteFrames_t1act"]
animations = []

[node name="Tiro" type="Area2D" groups=["Tiro"]]
collision_layer = 128
collision_mask = 3
script = ExtResource("1_t1act")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 0)
shape = SubResource("CircleShape2D_60wac")
debug_color = Color(0.960586, 0.9237756, 0.22185624, 0.41960785)

[node name="Timer" type="Timer" parent="CollisionShape2D"]
wait_time = 8.0
one_shot = true
autostart = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_t1act")
animation = &""

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="CollisionShape2D/Timer" to="." method="_on_timer_timeout"]
